--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+<div style="display: flex; justify-content: center;">
 <img src="int.png" style="
   display: flex;
   justify-content: center;
   " />
+</div>
