--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<body style="background: linear-gradient(#3d3d3d,#9999999)"
 <div style="display: flex; justify-content: center;">
 <img src="int.png" style="
   display: flex;
