--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body style="background: linear-gradient(#3d3d3d,#999999)" />
+<body style="background-color: #3d3d3d)" />
 <div style="display: flex; justify-content: center;">
 <img src="int.png" style="
   display: flex;
