--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body style="background-color: #3d3d3d;" />
+<body style="background-color: #999999;" />
 <div style="display: flex; justify-content: center;">
 <img src="int.png" style="
   display: flex;
